--- a/resources/assets/sass/4-pages/_app-home.sass
+++ b/resources/assets/sass/4-pages/_app-home.sass
@@ -13,7 +13,8 @@
     right: 3em
     top: 3em
     img
-      width: 40px 
+      width: 40px
+      border-radius: 3px
   ul
     list-style: none
     text-align: right
@@ -74,10 +75,13 @@
       text-decoration: none
     .buttons
       float: right
-      margin-top: -6px
+      margin-top: -1px
       .button
-        font-size: .8em
+        font-size: .9em
         margin-left: .5em
+        &:hover,
+        &:focus
+          color: #33acb7
   .post_wrapper
     padding: 3em
     border-bottom: 1px solid #d6dce0
